# spsgenai

./: .gitignore  pyproject.toml
AdvancedImage_Assignment4/: __init__.py  common.py  energy.py  theory_answers.py  train_ddpm.py  train_ebm.py  unet_ddpm.py
Assignment5_ReinforcementLearning/: rl_assignment5.py  train_module9.py
CNN_Assignment2/: model.py  trainer.py
GAN_Assignment3/: model.py  theory_answers.py  training.py
app/: bigram_model.py  embeddings.py  main.py
