[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
