[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.117.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "spacy==3.8.7",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
]